--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,13 @@
   }
 }
 
+html[data-theme='dark'] {
+  --background: #1a202c;
+  --text-color: #fff
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-fira-mono);
 }
