--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,10 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+  --color-active : #5693f5;
+  --color-primary-bg-light: #fff;
+  --color-primary-bg-dark: #1a202c;
 }
 
 @media (prefers-color-scheme: dark) {
